# GenesisEngine

./: .gitignore  CMakeLists.txt  GenesisGuidelines.txt  imgui.ini
ModuleTemplate/: CMakeLists.txt
installers_and_packages/GenesisEditor/src/: GenesisEditor.cpp
modules/SceneRenderer/: CMakeLists.txt
modules/SceneRenderer/include/: SceneRenderer.hpp
modules/SceneRenderer/shaders/: gradient.frag  gradient.vert
modules/SceneRenderer/src/: SceneRenderer.cpp
modules/public/EditorGUI/: CMakeLists.txt
modules/public/EditorGUI/include/: EditorGUI.hpp
modules/public/EditorGUI/src/: EditorGUI.cpp
modules/public/GenesisEditor/: CMakeLists.txt
modules/public/GenesisEditor/include/: GenesisEditor.hpp
modules/public/GenesisEditor/src/: GenesisEditor.cpp
modules/public/GenesisMath/: CMakeLists.txt
modules/public/GenesisMath/include/: GenesisMath.hpp
modules/public/GenesisMath/include/math/: SectorFloat.hpp  Vector.hpp
modules/public/GpuSystem/: CMakeLists.txt
modules/public/GpuSystem/include/: GpuSystem.hpp
modules/public/GpuSystem/src/: GpuSystem.cpp
modules/public/SceneRenderer/: CMakeLists.txt
modules/public/SceneRenderer/include/: SceneRenderer.hpp
modules/public/SceneRenderer/shaders/: gradient.frag
modules/public/SceneRenderer/src/: SceneRenderer.cpp
scripts/: transpiler.py
src/core/: main.cpp
src/math/: SectorFloat.hpp
